# proto11

./: CMakeLists.txt  README.md  generate.cmake  main.cpp  tests.cmake
compiler/: cpp11_generator.cpp  emitter.hpp  enum.hpp  file.hpp  helpers.hpp  main.cpp  message.hpp
cpp11/: cpp11_generator.hpp  enum.hpp  file.hpp  foreach.hpp  helpers.hpp  message.hpp
proto11/: generated.hpp
proto11/encoder/: const.hpp  encoder.hpp  message.hpp  message.t.cpp  varint.hpp  varint.t.cpp
tests/: basic.cpp  basic.proto  imported.proto  tut1.cpp
